objects/LLC_BI__Covenant_Compliance2__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Approval_Date__c</fullName>
        <description>This field is automatically calculated. Date the Covenant was approved.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the Covenant was approved.</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically calculated. User that approved the review of this Covenant.</description>
        <inlineHelpText>User that approved the review of this Covenant.</inlineHelpText>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Covenant_Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Associated_Spread_Statement_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is manually populated. The Spread Statement Period the Covenant Compliance record is being associated with.</description>
        <inlineHelpText>The Spread Statement Period the Covenant Compliance record is being associated with.</inlineHelpText>
        <label>Associated Spread Statement Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Covenant Compliances</relationshipLabel>
        <relationshipName>Covenant_Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Associated_Statement_Period_Status__c</fullName>
        <description>This field is automatiaclly populated via a batch job. It identifies whether the covenant compliance record has been associated with a statement period in Spreads.</description>
        <label>Associated Statement Period Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Associated</fullName>
                </value>
                <value>
                    <fullName>Unassociated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Automated_Testing_Status__c</fullName>
        <description>This field is automatically populated via a batch job. It identifies whether the value tested for this covenant compliance passes or fails the rule for this covenant.</description>
        <label>Automated Testing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Bundle__c</fullName>
        <description>This field is automatically populated via a formula. It automatically populates the associated Underwriting Template Name for the covenant&apos;s relationship.</description>
        <formula>CASESAFEID(LLC_BI__Associated_Spread_Statement_Period__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Bundle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>This field is optional. It is a text field which allows users to enter additional notes or information related to the Covenant Compliance record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant__c</fullName>
        <description>This field is required and is automatically populated. It identifies the Covenant associated to the Covenant Compliance record and is automatically populated when creating a new Covenant Compliance.</description>
        <label>Covenant</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipName>Covenant_Compliances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <description>This field is automatically populated via trigger. It stores the date of the covenant&apos;s Effecitve Date at the time the covenant compliance is created. The Effective Date is the statement date of the financial statement this covenant is for.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Evaluated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatic. The user who evaluated this Covenant.</description>
        <inlineHelpText>The user who evaluated this Covenant.</inlineHelpText>
        <label>Evaluated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Covenant_Compliances_Evaluated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Evaluation_Date__c</fullName>
        <description>This field is manually populated. The date this covenant was evaluated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date this covenant was evaluated.</inlineHelpText>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exception_Date__c</fullName>
        <description>This field is automatically calculated. The date the Covenant Compliance record moves to exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If there was an exception, the date that the exception occurred.</inlineHelpText>
        <label>Exception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Historic_Financial_Indicator__c</fullName>
        <description>This field is manually populated. The Financial Indicator Value of the associated Covenant when the Covenant Compliance record was set to compliant.</description>
        <inlineHelpText>The Financial Indicator Value of the associated Covenant when the Covenant Compliance record was set to compliant.</inlineHelpText>
        <label>Historic Financial Indicator Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Period_Key__c</fullName>
        <description>This field is automatically populated via a formula. It stores the associated Spread Statement Period Key.</description>
        <formula>LLC_BI__Associated_Spread_Statement_Period__r.LLC_BI__Period_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is required. It is typically manually populated, but finanical covenants can be automated. It identifies the Status of the Covenant Compliance record (for example, New, Waived, Compliant, etc.).</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Covenant Compliance</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COMP-{0000}</displayFormat>
        <label>Covenant Compliance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covenant Compliances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>